<resources>
    <string name="app_name">Pado</string>
    <string name="logo_pado">logo_pado</string>
    <string name="o_mundo_cada_vez_mais_digital">O MUNDO\nCADA VEZ MAIS\n<b>DIGITAL</b></string>
    <string name="novidades">Novidades</string>
    <string name="produtos">Produtos</string>
    <string name="fde_600w_nome">FDE-600w</string>
    <string name="fde_600w_descricao">FECHADURA DIGITAL DE EMBUTIR A PROVA D\'ÁGUA E COM CONECTIVIDADE</string>
    <string name="fde_600w_preco">R$1.500,00</string>
    <string name="fde_300w_nome">FDE-300w</string>
</resources>